
Table book_requests as b {
  id int [pk, not null, unique, increment]
  title varchar
  author varchar
  isbn varchar
  status book_status [not null, default: 'pending']
  user_id int [not null]
  kindle_id int [not null]
}

Table users as u {
  id int [pk, not null, unique, increment]
  email varchar
  password varchar [not null]
  name varchar
  type user_type [not null, default: 'user']
}

Table kindles as k {
  id int [pk, not null, unique, increment]
  email varchar [not null]
  device_name varchar
  user_id int [not null]
}

ref: users.id - book_requests.user_id
ref: kindles.id - book_requests.kindle_id
ref: users.id <> kindles.id

enum user_type {
  user
  admin
}

enum book_status {
  pending
  fulfilled
}